# digiroyale

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SurveyQs.txt  ideas.md
data/: CMakeLists.txt
data/templates/: token.json
include/: CMakeLists.txt
include/digiroyale/: example.hpp
include/digiroyale/simulation/: Inventory.hpp  Map.hpp  Random.hpp  Survivor.hpp  example.hpp
lib/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/discordbot/: main.cpp
src/simulation/: Random.cpp  Survivor.cpp  example.cpp
src/test/: main.cpp
